# socviz

./: .gitignore  .nojekyll  CNAME  Final_Melbourne.ipynb  README.md  Week8.ipynb  _quarto-production.yml  _quarto.yml  about.html  about.ipynb  about.qmd  contact.html  contact.ipynb  contact.qmd  custom-dark.scss  custom-light.scss  data.dvc  final_project.html  final_project.ipynb  final_project.qmd  flake.nix  index.html  index.ipynb  index.qmd  pyproject.toml  quick_preview.md  robots.txt  search.json  sitemap.xml  story.html  story.ipynb  story.md  story.qmd  story_interactive.html  story_interactive.qmd  warmup_story.ipynb  warmup_story.qmd
pages/: .gitignore  conclusion.html  conclusion.ipynb  conclusion.qmd  melbourne.html  melbourne.ipynb  melbourne.qmd  melbourne_details.html  melbourne_details.ipynb  melbourne_details.qmd  melbourne_job.html  melbourne_job.ipynb  melbourne_job.qmd  melbourne_population.html  melbourne_population.ipynb  melbourne_population.qmd  melbourne_residential.html  melbourne_residential.ipynb  melbourne_residential.qmd  san_francisco.html  san_francisco.ipynb  san_francisco.qmd  summary.html  summary.ipynb  summary.qmd
sandbox/: assault_on_weekdays.py  bike_investigation.py  bokeh.py  correlation_matrix.py  filter_categories.py  geo_melbourne.py  history_investigation.py  interact_districts.py  interact_incidents.py  interact_parade.py  investigate_jobs.py  investigate_melbourne.py  jobs_historic_trends.py  jobs_rank_table.py  jobs_ranks.py  jobs_summary.py  line_plot_jobs.py  preprocess.py  preprocess_dataset_1.py  preprocess_dataset_2.py
(+17 files in other folders)
