[tool.poetry]
name = "social-data-and-viz"
version = "0.1.0"
description = ""
authors = [
    "Benjamin Starostka Jakobsen <benjamin.starostka@gmail.com>",
    "Xinyi Liu <name@mail.com>"
]
readme = "README.md"
packages = [{include = "socviz"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
polars = "^0.16.14"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
ipykernel = "^6.22.0"
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
