[tool.poetry]
name = "socviz"
version = "0.1.0"
description = ""
authors = [
    "Benjamin Starostka Jakobsen <benjamin.starostka@gmail.com>",
    "Xinyi Liu <name@mail.com>"
]
readme = "README.md"
packages = [{include = "socviz"}, {include = "sandbox"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
polars = "^0.16.14"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
scipy = "^1.10.1"
seaborn = "^0.12.2"
plotly = "^5.13.1"
bokeh = "^3.1.0"
folium = "^0.14.0"
rich = "^13.3.3"
pyarrow = "^11.0.0"
matplotx = {extras = ["all"], version = "^0.3.10"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
ipykernel = "^6.22.0"
nbformat = "^5.2.0"
nbclient = ">=0.2,<0.6"
black = "^23.1.0"
mypy = "^1.1.1"
jupyter-cache = "^0.5.0"
debugpy = "^1.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
